--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@ May 30 2024
 
 <head>
 	<meta charset="UTF-8">
-	<title>Lab 11 - Build a CI/CD Pipeline with Jenkins and webhook by Cesar</title>
+	<title>Lab 11 - Build a CI/CD Pipeline with Jenkins and webhook by Cesar.</title>
 	<meta name="description" content="...">
 
 	<meta name="viewport" content="width=device-width, maximum-scale=5, initial-scale=1">
