--- a/public/index.html
+++ b/public/index.html
@@ -125,11 +125,11 @@ May 30 2024
 						understanding and skills?</h2>
 
 
-					<p>Yor answer here.</p>
+					<p>Most: terminal skills and comand struture. Least: Piping in Jenkins</p>
 
 					<h3 class="h4">Please list the 5 most interesting and the 5 least interesting aspects of the DevOps
 						course.</h3>
-					<p>Your answer here.</p>
+					<p>1: Syncing all stuff in jenkins 2: being able to use all tools 3: Finally using jenkins like it should be  and thats all, for least stuff 1: So  many issues with commands!</p>
 
 				</div>
 
